<resources>
    <string name="app_name">TPS401</string>

    <string name="bt_flush_led_title">FLUSH LED</string>
    <string name="bt_flush_led_open">OPEN</string>
    <string name="bt_flush_led_close">CLOSE</string>

    <string name="bt_proximity_sensor_title">PROXIMITY SENSOR</string>
    <string name="tv_proximity_sensor_someone">SOMEONE</string>
    <string name="tv_proximity_sensor_none">NONE</string>
    <string name="tv_proximity_sensor_error">ERROR</string>
    <string name="start_service">start_service</string>
    <string name="stop_service">stop_service</string>

    <string name="bt_relay_title">RELAY</string>
    <string name="bt_relay_open">OPEN</string>
    <string name="bt_relay_close">CLOSE</string>

    <string name="bt_rs485_title">RS485</string>
    <string name="bt_rs485_send">SWITCH TO SEND MODE</string>
    <string name="bt_rs485_receive">SWITCH TO RECEIVE MODE</string>

    <string name="bt_nfc_title">NFC</string>
    <string name="tv_nfc_notsupport">The device does not support NFC</string>
    <string name="tv_nfc_working">Please Swipe Your Card</string>
    <string name="tv_nfc_notwork">Please Go To Settings And Open The NFC Switch</string>

    <string name="bt_contrl_title">Control</string>
    <string name="remove">Remove</string>
    <string name="not_remove">Not remove</string>

    <string name="bt_led_title">LED</string>
    <string name="bt_led_open">OPEN</string>
    <string name="bt_led_close">CLOSE</string>

    <string name="camera0_close">camera0 close</string>
    <string name="camera0_open">camera1 open</string>
    <string name="camera1_close">camera0 close</string>
    <string name="camera1_open">camera1 open</string>
    <string name="camera">camera</string>
    <string name="bt_blue_open">blue open</string>
    <string name="bt_blue_close">blue close</string>
    <string name="bt_red_open">red open</string>
    <string name="bt_red_close">red colse</string>
</resources>
