<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_blue_open"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_blue_open" />

    <Button
        android:id="@+id/btn_blue_close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_blue_close" />

    <Button
        android:id="@+id/btn_green_open"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_red_open" />

    <Button
        android:id="@+id/btn_green_close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_red_close" />

</LinearLayout>